# hasher

./: Cargo.toml  README.md
src/: lib.rs  main.rs  sha256.rs
src/hash_algorithms/: sha256.rs
